Caching API, new Components, index page updates.

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -1,3 +1,6 @@
-.helloWorld {
-  color: red;
+.playWrapper {
+  padding: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
